(Format: Year/Month/Day)
Changes for 0.9.13
*05/04/27:
  * Fix a bunch more issues with recent patches (Simon)
    - Clock text colour on start
    - Resizing not updating in some cases
    - menu separators not being drawn
    FbTk/... FbWindow.hh MenuSeparator.hh/cc TextButton.cc
    ClockTool.cc IconbarTool.cc TextTheme.cc ToolFactory.cc
  * Close #1107216, minor fbgm-issue, cosmetic startfluxbox (from the OpenBSD patches)
    nls/Makefile.am util/fluxbox-generate_menu.in util/startfluxbox.in
  * Fix #1182770 (Mathias)
    session.screen*.workspaces: <int> and the number of
    workspaces in the running fluxbox were out of sync and lead to
    segfault on a "reloadconfig"-Command.
    fluxbox.cc Screen.cc Workspace.cc WorkspaceNameTool.cc
  * Fix drawing when transparency off (Simon)
    FbWindow.cc
*05/04/26:
  * Fix systray icon sizing (send a configurenotify on resize) (Simon)
    SystemTray.cc WinClient.hh/cc FbTk/FbWindow.hh/cc Window.cc
  * Extension of previous patch, pushing various bits of menu items and
    text buttons onto the background, and fixing various issues (Simon) 
    + Incidentally, adds some new theme items (due to backwards 
      compatibility fix):
      - menu.hilite.submenu.pixmap:    <Pixmap>
      - menu.hilite.selected.pixmap:   <Pixmap>
      - menu.hilite.unselected.pixmap: <Pixmap>
    These are equivalent to the no-.hilite ones, except are shown
    when the item is highlighted...
    FbTk/...
      Menu.hh/cc MenuItem.hh/cc MenuTheme.hh/cc TextButton.hh/cc 
      FbWindow.hh/cc MenuIcon.hh/cc
    FbWinFrame.hh/cc IconButton.hh/cc ToggleMenu.hh Window.cc    
*05/04/25:
  * Fixed #1188690, fbrun segfault (Mathias)
    FbTk/App.cc
*05/04/23:
  * Close of #956325 (Mathias)
       WorkspaceMenu -> left click on a item will jump TO that
                        workspace
                     -> middle click will fetch it to the current
                        workspac
       SendToMenu    -> left click send it quietly